xedoc-rs/tui-bottom-pane/src/snapshots/xedoc_tui_bottom_pane__tests__active_task_list_overflow_scrolls_to_current_task_snapshot.snap
---
source: tui-bottom-pane/src/lib.rs
expression: "render_snapshot(&pane, area)"
---
• Tasks 14/15                                                   
  └ ✔ Task 3                                                    
    ✔ Task 4                                                    
    ✔ Task 5                                                    
    ✔ Task 6                                                    
    ✔ Task 7                                                    
    ✔ Task 8                                                    
    □ Task 9                                                    
    ... 6 more                                                  
╭──────────────────────────────────────────────────────────────╮
│❯ Ask Xedoc to do anything                                    │
╰──────────────────────────────────────────────────────────────╯
  ? for shortcuts                            100% context left
