xedoc-rs/tui-bottom-pane/src/snapshots/xedoc_tui_bottom_pane__tests__active_task_list_snapshot.snap
---
source: tui-bottom-pane/src/lib.rs
expression: "render_snapshot(&pane, area)"
---
Working (0s • esc to interrupt)                                 
                                                                
• Tasks 1/3                                                     
  └ ✔ Inspect current bottom-pane plan handling                 
    □ Render the active task list above the entry field         
    □ Run targeted TUI tests                                    
╭──────────────────────────────────────────────────────────────╮
│❯ Ask Xedoc to do anything                                    │
╰──────────────────────────────────────────────────────────────╯
  ? for shortcuts                            100% context left
