xedoc-rs/tui-bottom-pane/src/snapshots/xedoc_tui_bottom_pane__tests__slash_command_popup_dismissed.snap
---
source: tui-bottom-pane/src/lib.rs
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interrupt)                           
                                                            
╭──────────────────────────────────────────────────────────╮
│❯ /rev                                                    │
╰──────────────────────────────────────────────────────────╯
  tab to queue message                   100% context left
