xedoc-rs/tui-bottom-pane/src/snapshots/xedoc_tui_bottom_pane__tests__status_and_composer_fill_height_without_bottom_padding.snap
---
source: tui-bottom-pane/src/lib.rs
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interr…
                              
╭────────────────────────────╮
│❯ Ask Xedoc to do anything  │
╰────────────────────────────╯
           100% context left
