xedoc-rs/tui-bottom-pane/src/snapshots/xedoc_tui_bottom_pane__tests__status_and_queued_messages_snapshot.snap
---
source: tui-bottom-pane/src/lib.rs
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interrupt)               
                                                
• Queued follow-up inputs                       
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit last queued message              
╭──────────────────────────────────────────────╮
│❯ Ask Xedoc to do anything                    │
╰──────────────────────────────────────────────╯
  ? for shortcuts            100% context left
