xedoc-rs/tui-bottom-pane/src/snapshots/xedoc_tui_bottom_pane__tests__status_hidden_when_height_too_small_height_1.snap
---
source: tui-bottom-pane/src/lib.rs
expression: "render_snapshot(&pane, area1)"
---
› Ask Xedoc to do a
